Fix line wrapping bug in the auto-resizing textarea

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-/* based on http://necolas.github.com/normalize.css/ and https://design.firefox.com/photon/visuals/color.html and Windows 98 */
+﻿/* based on http://necolas.github.com/normalize.css/ and https://design.firefox.com/photon/visuals/color.html and Windows 98 */
 
 /*
  note for anyone working on this:
@@ -255,6 +255,8 @@ textarea,
     width: 100%;
     background: #fff;
     box-sizing: border-box;
+    overflow-wrap: break-word;
+    white-space: pre-wrap;
 }
 
 button,
